# expense_manager

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  MILESTONES.md  README.md  build_taxonomy_index.py  cli_test.py  config.yaml  main.py  project_structure.py  pyproject.toml  test_classifier.py  test_classifier_agent.py
.github/workflows/: ci.yml  pipeline.yml
data/: corrections.db  image_metadata.db  main_data.db  taxonomy.db  taxonomy.index  taxonomy.meta.json
docs/diagrams/: core-classes.mmd  data-models.mmd
notebooks/: checklist.md  experiments.ipynb  google_auth.ipynb
pages/: page1_upload.py  page2_review.py  page3_confirm.py  page4_taxonomy.py
scripts/: build_taxonomy_index.py  cleanup_pending.py  cli_test.py  deploy.sh  manual_test_classifier.py  setup_pgvector.py
src/agents/: classifier.py  parser.py
src/components/: image_uploader.py  navbar.py  ocr_handler.py
src/dbs/: corrections_db.py  faiss_store.py  image_metadata.py  main_db.py  taxonomy_db.py
src/expense_manager/agents/: classifier.py  parser.py
src/expense_manager/components/: image_uploader.py  ocr_handler.py
src/expense_manager/components/ai_chabot/: README.md  app.py  chat_ui.py
src/expense_manager/dbs/: corrections_db.py  faiss_store.py  image_metadata.py  main_db.py  taxonomy_db.py
src/expense_manager/integration/: gsheet_handler.py
src/expense_manager/llm/: __init__.py  base.py  gemini_client.py  openai_client.py
src/expense_manager/models/: __init__.py  classification_choice.py  llm.py  ocr_result.py  parsers.py  receipt.py
src/expense_manager/sync/: taxonomy_sync.py
src/expense_manager/utils/: artifacts_gcs.py  embed_texts.py  image_fingerprint.py  load_config.py
src/integration/: gsheet_handler.py
src/llm/: __init__.py  base.py  gemini_client.py  openai_client.py
src/models/: __init__.py  classifier.py  parsers.py  receipt.py
src/sync/: taxonomy_sync.py
src/utils/: embed_texts.py
tests/: test_classifier.py  test_dbs.py  test_end_to_end.py  test_gsheet_handler.py  test_ocr_handler.py  test_parser.py
